--- a/product-api.properties
+++ b/product-api.properties
@@ -1,11 +1,31 @@
-Repositorio de configuracion spring.application.name=product-api
+#Propiedades de H2
+spring.datasource.url=jdbc:h2:mem:productDB
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
-server.port=8081
+spring.h2.console.enabled=true
+spring.h2.console.patc=/h2-console
 
-spring.datasource.url=jdbc:h2:mem:productDB spring.datasource.driver-class-name=org.h2.Driver spring.datasource.username=sa spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
-spring.h2.console.enabled=true spring.h2.console.patc=/h2-console
+#Propiedades de Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect spring.jpa.hibernate.ddl-auto=update spring.jpa.show-sql=true
+eureka.instance.lease-renewal-interval-in-seconds=10
+eureka.instance.lease-expiration-duration-in-seconds=30
 
-spring.data.mongodb.uri=mongodb+srv://Admin:Admin@cluster0.6ylkvtv.mongodb.net/?appName=Cluster0 spring.data.mongodb.database=mitienda_auditoria
+#Propiedades de Actuator
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoints.web.base-path=/actuator
+management.endpoint.health.show-details=always
+management.info.env.enabled=true
+
+# Información de la aplicación para Actuator
+info.app.name=Product API
+info.app.description=Microservicio de gestión de productos
+info.app.version=1.0.0
