Enhance actuator properties with Circuit Breaker settings
Added configuration for Circuit Breaker and logging levels.

--- a/product-api.properties
+++ b/product-api.properties
@@ -20,12 +20,23 @@ eureka.instance.lease-renewal-interval-in-seconds=10
 eureka.instance.lease-expiration-duration-in-seconds=30
 
 #Propiedades de Actuator
-management.endpoints.web.exposure.include=health,info,metrics
+management.endpoints.web.exposure.include=health,circuitbreakers,info
 management.endpoints.web.base-path=/actuator
 management.endpoint.health.show-details=always
 management.info.env.enabled=true
+management.endpoint.circuitbreakers.enabled=true
 
 # Información de la aplicación para Actuator
 info.app.name=Product API
 info.app.description=Microservicio de gestión de productos
 info.app.version=1.0.0
+
+#Configuración de Circuit Breaker
+resilience4j.circuitbreaker.instances.productService.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.productService.slidingWindowSize=5
+resilience4j.circuitbreaker.instances.productService.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.productService.waitDurationInOpenState=10s
+resilience4j.circuitbreaker.instances.productService.permittedNumberOfCallsInHalfOpenState=3
+
+logging.level.io.github.resilience4j=DEBUG
+logging.level.org.springframework.web.reactive.function.client=DEBUG
