Update Eureka service URL to use HTTPS

--- a/product-api.properties
+++ b/product-api.properties
@@ -12,7 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 #Propiedades de Eureka
-eureka.client.service-url.defaultZone=eureka-server-h3gafad9awf6aef5.canadacentral-01.azurewebsites.net/eureka
+eureka.client.service-url.defaultZone=https://eureka-server-h3gafad9awf6aef5.canadacentral-01.azurewebsites.net/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
