--- a/product-api.properties
+++ b/product-api.properties
@@ -40,3 +40,7 @@ resilience4j.circuitbreaker.instances.productService.permittedNumberOfCallsInHal
 
 logging.level.io.github.resilience4j=DEBUG
 logging.level.org.springframework.web.reactive.function.client=DEBUG
+
+# Tenant y Application ID URI
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://login.microsoftonline.com/949ad22e-567c-4a5f-bf4f-53272261ce76/v2.0
+spring.security.oauth2.resourceserver.jwt.audience=api://3312e56e-64e1-4ea9-ac8b-62cc8e0f90ec
