--- a/sale-api.properties
+++ b/sale-api.properties
@@ -33,7 +33,7 @@ info.app.description=Microservicio de gestión de productos
 info.app.version=1.0.0
 
 #Endpoitn de Product API
-api.product.url=http://localhost:8081/api/product
+api.product.url=http://localhost:8081/api/products
 
 #Configuración de Circuit Breaker
 resilience4j.circuitbreaker.instances.productService.registerHealthIndicator=true
